2015-11-13 Siddharth Ravikumar <sravik@bgsu.edu>

	bumping to v0.1.3

2015-11-08 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py: ComboxDirMonitor and NodeDirMonitor now keep
	track of the files that are created during "this" run; this
	information is used to ignore the on_modified event triggered by
	watchdog when a file is created.

	Also, a delay proportional to the size of the file is introduced
	on the on_modified callback methods of the ComboxDirMonitor and
	NodeDirMonitor to prevent multiple on_modified from being
	triggered by watchdog.

	These changes are related to bug#10 (See TODO.org).

	* tests/events_test.py: updated correponding tests.

2015-11-02 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 7509f54f5173769eea

	* combox/file.py: Updated the write_file function; a buffer size
	is explicitly specified when opening a file to write.

	This change is related to bug#10.

2015-10-20 Siddharth Ravikumar <sravik@bgsu.edu>

	bumping to v0.1.2

2015-10-18 Siddharth Ravikumar <sravik@bgsu.edu>

	combox now uses python's logging module instead of `print` to
	stdout information/errors.

	* combox/log.py: The module used by all other combox modules to
	log information/errors to stdout.

2015-09-17 Siddharth Ravikumar <sravik@bgsu.edu>

	* v0.1.0: initial version of combox

	Works on GNU/Linux and OS X.